# ssc-pkg

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pylintrc  .travis.yml  README.md  README.rst  lint.md  main.py  mypy.ini  pyproject.toml  rtest.sh  ruff.toml  setup.py  test.sh
doc/: Makefile  conf.py  index.rst  make.rst  roadmap.rst  usage.rst
ssc_pkg/: main.py  msd.py  notedata.py  simfile.py  simfile_ds.py  simfile_msd.py  transform_abc.py  transforms.py
ssc_pkg/make/: __init__.py  _make.py  commands.py  make.py  manager.py  parse.py  parser.py  util.py
ssc_pkg/simfile/: __init__.py  msd.py  structs.py
ssc_pkg/transform/: abc.py
test/: bench.py  easy.sm  easy.ssc  kitchen_sink.ssc  test_msd.py  test_notedata.py  test_simfile.py
test/make/: test_manager.py  test_parse.py  test_parser.py
