[build-system]
requires = [
	"setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "ssc-pkg"
version = "0.11.1"
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
requires-python = "~=3.10"
dependencies = [
	"pyyaml>=6.0",
	"attrs~=21.4", # TODO weird mypy error with 22.1, probably my fault
]

[project.optional-dependencies]
lint = [
	"mypy~=0.991",
	"flake8==3.9.2", # b/c flake8-tabs: ~=3.0
	"flake8-tabs~=2.3,>=2.3.2",
]

[project.scripts]
ssc-pkg = "ssc_pkg.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false
